# oscar

./: .travis.yml  Cargo.toml  README.md  build.sh
.github/workflows/: rust.yml
ci/: before_deploy.sh  script.sh
src/: json.rs  main.rs
