[package]
name = "oscar"
version = "0.1.0"
authors = ["Adam Simpson <adam@heysparkbox.com>"]
edition = "2018"
description = "A CLI application to download Sesame Street videos from PBS. Ideally run in cron or another scheduler."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/asimpson/oscar"
keywords = ["cli", "video", "pbs"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = "0.9.21"
serde_json = "1.0"
serde = "1.0"
dirs = "2.0"
structopt = "0.3.5"
simple_logger = "1.3.0"
log = { version = "0.4.8", features = ["max_level_info"] }

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false