[package]
name = "oscar"
version = "0.1.20"
authors = ["Adam Simpson <adam@heysparkbox.com>"]
edition = "2018"
description = "A CLI application to download videos from PBS. Ideally run in cron or another scheduler."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/asimpson/oscar"
keywords = ["cli", "video", "pbs"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.9.21", features = ["rustls-tls"], default-features = false }
serde_json = "1.0"
serde = "1.0"
dirs = "2.0"
structopt = "0.3.5"
simple_logger = "1.3.0"
log = { version = "0.4.8", features = ["max_level_info"] }

[target.arm-unknown-linux-gnueabihf.dependencies]
reqwest = { version = "0.9.21", features = ["default-tls-vendored"], default-features = false }

[profile.release]
opt-level = 'z'
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false